--- a/.gitignore
+++ b/.gitignore
@@ -673,6 +673,8 @@ autom4te.cache/
 /gettext-tools/tests/gettextpo-1-prg.exe
 /gettext-tools/tests/intl-1-prg
 /gettext-tools/tests/intl-1-prg.exe
+/gettext-tools/tests/intl-3-prg
+/gettext-tools/tests/intl-3-prg.exe
 /gettext-tools/tests/intl-setlocale-1-prg
 /gettext-tools/tests/intl-setlocale-1-prg.exe
 /gettext-tools/tests/sentence-1-prg
