--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -21,9 +21,9 @@ EXTRA_DIST =
 MOSTLYCLEANFILES = core *.stackdump
 
 TESTS = gettext-1 gettext-2 \
-	intl-1 intl-2 intl-3 \
+	intl-1 intl-2 intl-3 intl-4 \
 	intl-setlocale-1 \
-	gettext-4 gettext-5 gettext-6 gettext-7 gettext-8 \
+	gettext-5 gettext-6 gettext-7 gettext-8 \
 	msgattrib-1 msgattrib-2 msgattrib-3 msgattrib-4 msgattrib-5 \
 	msgattrib-6 msgattrib-7 msgattrib-8 msgattrib-9 msgattrib-10 \
 	msgattrib-11 msgattrib-12 msgattrib-13 msgattrib-14 msgattrib-15 \
@@ -163,9 +163,9 @@ EXTRA_DIST += init.sh init.cfg $(TESTS) \
 	msguniq-a.in msguniq-a.inp msguniq-a.out \
 	qttest_pl.po qttest_pl.qm \
 	qttest2_de.po qttest2_de.qm qttest2_de.ts \
-	intl-1.po intl-2-1.po intl-2-2.po \
+	intl-1.po intl-2-1.po intl-2-2.po intl-4.po \
 	intl-setlocale-1-1.po intl-setlocale-1-2.po \
-	gettext-4.po gettext-5.po gettext-6-1.po gettext-6-2.po gettext-7.po \
+	gettext-5.po gettext-6-1.po gettext-6-2.po gettext-7.po \
 	gettextpo-1.de.po \
 	xgettext-1 \
 	xgettext-c-1 xg-c-21.c \
@@ -222,7 +222,7 @@ DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
 LDADD = $(LDADD_@USE_INCLUDED_LIBINTL@) @INTL_MACOSX_LIBS@
 LDADD_yes = ../intl/libintl.la @LTLIBTHREAD@
 LDADD_no = ../intl/libgnuintl.la @LTLIBTHREAD@ @LTLIBINTL@
-check_PROGRAMS = tstgettext tstngettext testlocale intl-1-prg intl-3-prg intl-setlocale-1-prg gettext-4-prg gettext-5-prg gettext-6-prg gettext-7-prg gettext-8-prg cake fc3 fc4 fc5 gettextpo-1-prg sentence-1-prg
+check_PROGRAMS = tstgettext tstngettext testlocale intl-1-prg intl-3-prg intl-4-prg intl-setlocale-1-prg gettext-5-prg gettext-6-prg gettext-7-prg gettext-8-prg cake fc3 fc4 fc5 gettextpo-1-prg sentence-1-prg
 tstgettext_SOURCES = tstgettext.c setlocale.c
 tstgettext_CFLAGS = -DINSTALLDIR=\".\"
 tstgettext_LDADD = ../gnulib-lib/libgettextlib.la $(LDADD)
@@ -234,10 +234,10 @@ intl_1_prg_SOURCES = intl-1-prg.c
 intl_1_prg_LDADD = ../gnulib-lib/libgettextlib.la $(LDADD)
 intl_3_prg_SOURCES = intl-3-prg.c
 intl_3_prg_LDADD = ../gnulib-lib/libgettextlib.la $(LDADD)
+intl_4_prg_SOURCES = intl-4-prg.c
+intl_4_prg_LDADD = ../gnulib-lib/libgettextlib.la $(LDADD)
 intl_setlocale_1_prg_SOURCES = intl-setlocale-1-prg.c
 intl_setlocale_1_prg_LDADD = ../gnulib-lib/libgettextlib.la $(LDADD)
-gettext_4_prg_SOURCES = gettext-4-prg.c
-gettext_4_prg_LDADD = ../gnulib-lib/libgettextlib.la $(LDADD)
 gettext_5_prg_SOURCES = gettext-5-prg.c
 gettext_5_prg_LDADD = ../gnulib-lib/libgettextlib.la $(LDADD)
 gettext_6_prg_SOURCES = gettext-6-prg.c
